* gcj-3.1-status.html: Anthony fixed PR 5912.  New bugs added. 	Platforms updated.

--- a/htdocs/java/gcj-3.1-status.html
+++ b/htdocs/java/gcj-3.1-status.html
@@ -33,15 +33,6 @@
 <td> Unknown </td>
 </tr>
 
-<tr bgcolor='#eeaaaa'>
-<td> 5912 </td>
-<td> gcj -R doesn't work for mingw32 cross compiler.
-     AG wrote a patch for this, and it has been approved, but it
-     hasn't gone in.
-</td>
-<td> AG </td>
-</tr>
-
 <tr>
 <td> 5924 </td>
 <td> <a href="http://gcc.gnu.org/ml/java/2002-03/msg00009.html">gij fails with current link line.</a>
@@ -60,23 +51,39 @@
      <td> Unknown </td>
 </tr>
 
+<tr> <td> 5948 </td>
+     <td> bootstrap failure on x86 Solaris </td>
+     <td> Unknown </td>
+</tr>
+
+<tr> <td> 5949 </td>
+     <td> bootstrap failure on OSF5.1 </td>
+     <td> Unknown </td>
+</tr>
+
+<tr> <td> 596 </td>
+     <td> EH failures on OSF5.1 </td>
+     <td> Unknown </td>
+</tr>
+
 <tr> <td> THANKS </td>
      <td> Update THANKS file to reflect reality </td>
      <td> Tom </td>
 </tr>
 
 <tr> <td> 3.1 test suite regressions </td>
-     <td> 3 failures observed on x86 </td>
+     <td> 3 failures observed on x86; 2 fixed by Eric Blake's patch; 1
+     remains (not critical) </td>
      <td> Tom </td>
 </tr>
 
-<tr bgcolor='#eeaaaa> <td> x86 Linux</td>
-     <td> Ok (3 regressions; see above) </td>
+<tr bgcolor='#aaeeee'> <td> x86 Linux</td>
+     <td> Ok </td>
      <td> Tom </td>
 </tr>
 
-<tr bgcolor='#eeaaaa'> <td> alpha Linux</td>
-     <td> Build/check in progress </td>
+<tr bgcolor='#aaeeee'> <td> alpha Linux</td>
+     <td> Ok </td>
      <td> Tom </td>
 </tr>
 
@@ -97,6 +104,11 @@
      <td> Rainer </td>
 </tr>
 
+<tr bgcolor='#eeaaaa'> <td> x86 Solaris 2.8</td>
+     <td> Bootstrap failure </td>
+     <td> Rainer </td>
+</tr>
+
 <tr bgcolor='#aaeeee'> <td> MIPS Irix </td>
      <td>I don't know what releases; building here might
          be a little difficult.  Ok.</td>
@@ -110,13 +122,13 @@
      <td> Adam </td>
 </tr>
 
-<tr bgcolor='#aaeeee'> <td> PPC Darwin</td>
-     <td> Ok </td>
-     <td> Andreas </td>
+<tr bgcolor="#eeaaaa"> <td> PPC Darwin</td>
+     <td> stddef.h tweak, std_cctype.h tweak, use "ar qc"</td>
+     <td> Andreas, Alexandre, others </td>
 </tr>
 
-<tr> <td>alpha Tru64 Unix</td>
-     <td>Unknown</td>
+<tr bgcolor="#eeaaaa"> <td>alpha Tru64 Unix</td>
+     <td> 5.1 bootstrap and EH failures</td>
      <td> Rainer </td>
 </tr>
 
