* gcj-3.1-status.html: 5966 is not gcj-specific.  Added Gnats 	links.  Updated test suite regression info.  Broke out platform 	table.  Added package table.
	* index.html: Changed /tt to /code.

--- a/htdocs/java/gcj-3.1-status.html
+++ b/htdocs/java/gcj-3.1-status.html
@@ -5,11 +5,13 @@
 <body bgcolor="#fffffff">
 <h1> gcj 3.1 status </h1>
 
+<h2> Bugs </h2>
+
 <table border=1 width="100%">
 
 <tr><th> Issue </th> <th> Status </th> <th> Who </th> </tr>
 
-<tr bgcolor='#eeaaaa'> <td> 4715 </td>
+<tr bgcolor='#eeaaaa'> <td> <a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?database=gcc&cmd=view&pr=4715">4715</a> </td>
      <td> Tree check failure in check_inner_circular_reference.
           Prevents Classpath from building.  Regression from 3.0.4.
 	  Patch in PR; Alex says it causes failures
@@ -17,7 +19,7 @@
      <td> Alex </td>
 </tr>
 
-<tr bgcolor='#eeaaaa'> <td> 5876 </td>
+<tr bgcolor='#eeaaaa'> <td> <a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?database=gcc&cmd=view&pr=5876">5876</a> </td>
     <td> jc1 crashes when targeting mingw32.  I believe this is the
          problem we think was introduced by my builtin function patch.
 	 Alex wrote a patch which I tested; should go in
@@ -26,7 +28,7 @@
 </tr>
 
 <tr bgcolor='#eeaaaa'>
-<td> 5879 </td>
+<td> <a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?database=gcc&cmd=view&pr=5879">5879</a> </td>
 <td>Throwing exceptions causes SEGV in GCJ-compiled code.
      Patch available but unreviewed.</td>
 </td>
@@ -34,35 +36,30 @@
 </tr>
 
 <tr>
-<td> 5924 </td>
+<td> <a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?database=gcc&cmd=view&pr=5924">5924</a> </td>
 <td> <a href="http://gcc.gnu.org/ml/java/2002-03/msg00009.html">gij fails with current link line.</a>
      Definitely a regression.
 </td>
 <td> Alexandre Oliva </td>
 </tr>
 
-<tr> <td> 5942 </td>
+<tr> <td> <a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?database=gcc&cmd=view&pr=5942">5942</a> </td>
      <td> Classpath build failure </td>
      <td> Alex </td>
 </tr>
 
-<tr> <td> 5944 </td>
+<tr> <td> <a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?database=gcc&cmd=view&pr=5944">5944</a> </td>
      <td> uint32_t madness :-(; various solutions proposed </td>
      <td> Unknown </td>
 </tr>
 
-<tr> <td> 5948 </td>
+<tr> <td> <a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?database=gcc&cmd=view&pr=5948">5948</a> </td>
      <td> bootstrap failure on x86 Solaris </td>
      <td> Unknown </td>
 </tr>
 
-<tr> <td> 5949 </td>
+<tr> <td> <a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?database=gcc&cmd=view&pr=5949">5949</a> </td>
      <td> bootstrap failure on OSF5.1 </td>
-     <td> Unknown </td>
-</tr>
-
-<tr> <td> 596 </td>
-     <td> EH failures on OSF5.1 </td>
      <td> Unknown </td>
 </tr>
 
@@ -72,10 +69,19 @@
 </tr>
 
 <tr> <td> 3.1 test suite regressions </td>
-     <td> 3 failures observed on x86; 2 fixed by Eric Blake's patch; 1
-     remains (not critical) </td>
+     <td> 1 failure observed on x86; cxxtest fails to link due to test
+     suite bug </td>
      <td> Tom </td>
 </tr>
+
+</table>
+
+
+<h2> Platforms </h2>
+
+<table border=1 width="100%">
+
+<tr><th> Platform </th> <th> Status </th> <th> Who </th> </tr>
 
 <tr bgcolor='#aaeeee'> <td> x86 Linux</td>
      <td> Ok </td>
@@ -135,6 +141,24 @@
 <tr> <td>linux -x- xscale-elf </td>
      <td> AG has one more patch </td>
      <td> AG </td>
+</tr>
+
+</table>
+
+<h2> Packages </h2>
+
+<table border=1 width="100%">
+
+<tr><th> Package </th> <th> Status </th> <th> Who </th> </tr>
+
+<tr> <td> Classpath build </td>
+     <td> Known bugs; see above </td>
+     <td> Alex (?) </td>
+</tr>
+
+<tr> <td> rhug </td>
+     <td> Build failure; not reported yet </td>
+     <td> Tom </td>
 </tr>
 
 </table>
