--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -129,7 +129,7 @@ extensively tested, so it is still disabled by default.
 <b>October 24, 2001</b>
 </td><td>
 Tom Tromey of Red Hat checked in the <code>javax.naming</code> and
-<code>javax.transaction</tt> packages, started by Anthony Green
+<code>javax.transaction</code> packages, started by Anthony Green
 finished by Warren Levy and Tom.
 </td></tr>
 
