* gcj-3.1-status.html: Removed `thanks' item. 	* thanks.html: Updated.

--- a/htdocs/java/thanks.html
+++ b/htdocs/java/thanks.html
@@ -35,6 +35,7 @@ Please keep this list in alphabetical order.
 IA-64 libffi port, and other work.
 <li>Godmar Back for his improvements and encouragement.
 <li>Scott Bambrough for help porting the compiler.
+<li>Eric Blake for helping to make gcj and libgcj conform to the specifications
 <li>Per Bothner for dreaming up, designing and implementing much of gcj.
 <li>Joerg Brunsmann for compiler hacking and help with the FAQ.
 <li>Glenn Chambers for help with the FAQ.
@@ -54,6 +55,7 @@ for all of their great compiler work.
 <li>Jakub Jelinek for improving the build system.
 <li>Oskar Liljeblad for hacking on AWT and his many bug reports and patches.
 <li>Bryce McKinlay for numerous gcj and libgcj fixes and improvements.
+<li>Adam Megacz for his work on the Win32 port
 <li>Jason Molenda for establishing the project infrastructure on
 <a href="http://sources.redhat.com">sources.redhat.com</a>.
 <li>Mike Moreton for his various patches.
@@ -68,9 +70,11 @@ for all of their great compiler work.
 <li>Jason Schroeder for jcf-dump patches.
 <li>John Stracke for his HTTP protocol fixes.
 <li>Jeff Sturm for porting help, bug fixes, and encouragement.
+<li>Andreas Tobler for his work porting libgcj to Darwin
 <li>Tom Tromey for his many contributions and libgcj maintainership.
 <li>Matt Welsh for help with Linux Threads.
 <li>Urban Widmark for help fixing java.io.
+<li>Mark Wielaard for new library code and his work integrating with Classpath
 <li>Gilles Zunino for help porting to Irix.
 </ul>
 
