* gcj-3.1-status.html: Closed 5944.  Added 5874.

--- a/htdocs/java/gcj-3.1-status.html
+++ b/htdocs/java/gcj-3.1-status.html
@@ -28,10 +28,15 @@
 </tr>
 
 <tr bgcolor='#eeaaaa'>
+    <td> <a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?database=gcc&cmd=view&pr=5874">5874</a> </td>
+    <td>libgcj test suite bug</td>
+    <td> Tom </td>
+</tr>
+
+<tr bgcolor='#eeaaaa'>
 <td> <a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?database=gcc&cmd=view&pr=5879">5879</a> </td>
 <td>Throwing exceptions causes SEGV in GCJ-compiled code.
      Patch available but unreviewed.</td>
-</td>
 <td> Unknown </td>
 </tr>
 
@@ -46,11 +51,6 @@
 <tr> <td> <a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?database=gcc&cmd=view&pr=5942">5942</a> </td>
      <td> Classpath build failure </td>
      <td> Alex </td>
-</tr>
-
-<tr> <td> <a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?database=gcc&cmd=view&pr=5944">5944</a> </td>
-     <td> uint32_t madness :-(; various solutions proposed </td>
-     <td> Unknown </td>
 </tr>
 
 <tr> <td> <a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?database=gcc&cmd=view&pr=5948">5948</a> </td>
@@ -100,20 +100,24 @@
      <td> Bryce </td>
 </tr>
 
-<tr> <td> Sparc Solaris</td>
-     <td> I don't know what releases; 2.5.1 is broken </td>
-     <td> Rainer </td>
-</tr>
-
-<tr bgcolor='#eeaaaa'> <td> x86 Solaris 2.8</td>
+<tr> <td> sparc-sun-solaris2.5.1 </td>
      <td> Bootstrap failure </td>
      <td> Rainer </td>
 </tr>
 
-<tr bgcolor='#aaeeee'> <td> MIPS Irix </td>
-     <td>I don't know what releases; building here might
-         be a little difficult.  Ok.</td>
-     <td> Unknown </td>
+<tr bgcolor='#aaeeee'> <td> sparc-sun-solaris2.8 </td>
+     <td> Ok </td>
+     <td> Rainer </td>
+</tr>
+
+<tr bgcolor='#eeaaaa'> <td> i386-pc-solaris2.8 </td>
+     <td> Bootstrap failure </td>
+     <td> Rainer </td>
+</tr>
+
+<tr bgcolor='#aaeeee'> <td> mips-sgi-Irix6.5 </td>
+     <td> Build in progress </td>
+     <td> Rainer </td>
 </tr>
 
 <tr> <td> x86 Mingw32</td>
@@ -128,8 +132,13 @@
      <td> Andreas, Alexandre, others </td>
 </tr>
 
-<tr bgcolor="#eeaaaa"> <td>alpha Tru64 Unix</td>
-     <td> 5.1 bootstrap and EH failures</td>
+<tr bgcolor="#eeaaaa"> <td>alpha-dec-osf4.0f</td>
+     <td> Bootstrap failure </td>
+     <td> Rainer </td>
+</tr>
+
+<tr bgcolor="#eeaaaa"> <td>alpha-dec-osf5.1</td>
+     <td> Bootstrap failure</td>
      <td> Rainer </td>
 </tr>
 
