* gcj-3.1-status.html: Solaris 2.5.1 is ok.  PR 5924 fixed.

--- a/htdocs/java/gcj-3.1-status.html
+++ b/htdocs/java/gcj-3.1-status.html
@@ -40,14 +40,6 @@
 <td> Unknown </td>
 </tr>
 
-<tr>
-<td> <a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?database=gcc&cmd=view&pr=5924">5924</a> </td>
-<td> <a href="http://gcc.gnu.org/ml/java/2002-03/msg00009.html">gij fails with current link line.</a>
-     Definitely a regression.
-</td>
-<td> Alexandre Oliva </td>
-</tr>
-
 <tr> <td> <a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?database=gcc&cmd=view&pr=5942">5942</a> </td>
      <td> Classpath build failure </td>
      <td> Alex </td>
@@ -100,8 +92,8 @@
      <td> Bryce </td>
 </tr>
 
-<tr> <td> sparc-sun-solaris2.5.1 </td>
-     <td> Bootstrap failure </td>
+<tr bgcolor='#aaeeee'> <td> sparc-sun-solaris2.5.1 </td>
+     <td> Ok </td>
      <td> Rainer </td>
 </tr>
 
