2002-03-15  Eric Blake  <ebb9@email.byu.edu>
	* thanks.html: Fix punctuation, alphabetization.

--- a/htdocs/java/thanks.html
+++ b/htdocs/java/thanks.html
@@ -24,25 +24,27 @@ Many people contribute to the GCJ project, and in many different
 capacities.  Any omissions to this list are accidental.  Feel free to
 contact <a href="mailto:green@cygnus.com">green@cygnus.com</a> if you
 have been left out or some of your contributions are not listed.
-Please keep this list in alphabetical order.
+<!-- Please keep this list in alphabetical order. -->
+
 <p>
 <ul>
 <li>Godmar Back for his improvements and encouragement.
 <li>Scott Bambrough for help porting the compiler.
 <li>Jon Beniston for his Win32 port.
 <li>Geoff Berry for his object serialization work and various patches.
-<li>Hans-J. Boehm for his <a href="http://www.hpl.hp.com/personal/Hans_Boehm/gc/">garbage collector</a>,
-IA-64 libffi port, and other work.
-<li>Godmar Back for his improvements and encouragement.
-<li>Scott Bambrough for help porting the compiler.
-<li>Eric Blake for helping to make gcj and libgcj conform to the specifications
+<li>Eric Blake for helping to make gcj and libgcj conform to the
+specifications.
+<li>Hans-J. Boehm for his <a
+href="http://www.hpl.hp.com/personal/Hans_Boehm/gc/">garbage
+collector</a>, IA-64 libffi port, and other work.
 <li>Per Bothner for dreaming up, designing and implementing much of gcj.
 <li>Joerg Brunsmann for compiler hacking and help with the FAQ.
-<li>Glenn Chambers for help with the FAQ.
 <li>Steve Chamberlain for config fixes and the picoJava port.
+<li>Glenn Chambers for help with the FAQ.
 <li>John-Marc Chandonia for various library patches.
 <li>Eric Christopher for his porting help and clean-ups.
-<li>The <a href="http://www.classpath.org">GNU Classpath project</a> for all of their merged runtime code.
+<li>The <a href="http://www.classpath.org">GNU Classpath project</a>
+for all of their merged runtime code.
 <li>Mo DeJong for gcj and libgcj bug fixes.
 <li>The GCC project <a
 href="http://gcc.gnu.org/onlinedocs/gcc/Contributors.html">contributors</a>
@@ -53,28 +55,31 @@ for all of their great compiler work.
 <li>Stu Grossman for gdb hacking, allowing us to debug our code.
 <li>Andrew Haley for his amazing compiler and library efforts.
 <li>Jakub Jelinek for improving the build system.
+<li>Warren Levy for his tremendous library work.
 <li>Oskar Liljeblad for hacking on AWT and his many bug reports and patches.
+<li>All of the Mauve project <a
+href="http://sources.redhat.com/cgi-bin/cvsweb.cgi/~checkout~/mauve/THANKS?rev=1.2&cvsroot=mauve&only_with_tag=HEAD">contributors</a>,
+for test code.
 <li>Bryce McKinlay for numerous gcj and libgcj fixes and improvements.
-<li>Adam Megacz for his work on the Win32 port
+<li>Adam Megacz for his work on the Win32 port.
 <li>Jason Molenda for establishing the project infrastructure on
 <a href="http://sources.redhat.com">sources.redhat.com</a>.
 <li>Mike Moreton for his various patches.
 <li>Alexandre Oliva for all of this porting and testing efforts.
-<li>Kresten Krab Thorup for his fantastic bytecode interpreter.
-<li>Warren Levy for his tremendous library work.
-<li>All of the Mauve project <a href="http://sources.redhat.com/cgi-bin/cvsweb.cgi/~checkout~/mauve/THANKS?rev=1.2&cvsroot=mauve&only_with_tag=HEAD">contributors</a>, for test code.
 <li>Rainer Orth for configuration clean-ups and porting help.
-<li>Alexandre Petit-Bianco for implementing much of the compiler, and continued maintainership.
+<li>Alexandre Petit-Bianco for implementing much of the compiler, and
+continued maintainership.
 <li>Rolf W. Rasmussen for hacking on AWT.
 <li>Bradley Schatz for his work on the FAQ.
 <li>Jason Schroeder for jcf-dump patches.
 <li>John Stracke for his HTTP protocol fixes.
 <li>Jeff Sturm for porting help, bug fixes, and encouragement.
-<li>Andreas Tobler for his work porting libgcj to Darwin
+<li>Kresten Krab Thorup for his fantastic bytecode interpreter.
+<li>Andreas Tobler for his work porting libgcj to Darwin.
 <li>Tom Tromey for his many contributions and libgcj maintainership.
 <li>Matt Welsh for help with Linux Threads.
 <li>Urban Widmark for help fixing java.io.
-<li>Mark Wielaard for new library code and his work integrating with Classpath
+<li>Mark Wielaard for new library code and his work integrating with Classpath.
 <li>Gilles Zunino for help porting to Irix.
 </ul>
 
@@ -102,15 +107,16 @@ in testing GCJ:
 <li>Simon Gornall
 <li>Fred Gray
 <li>John Griffin
+<li>Patrik Hagglund
 <li>Phil Hargett
+<li>Amancio Hasty 
 <li>Bryan W. Headley
 <li>Kevin B. Hendricks
-<li>Patrik Hagglund
-<li>Amancio Hasty 
 <li>Joep Jansen
 <li>David Kidd
 <li>Tobias Kuipers
 <li>Anand Krishnaswamy
+<li>H.J. Lu
 <li>Jesse Macnish
 <li>Anon A. Mous
 <li>Stefan Morrell
@@ -128,7 +134,6 @@ in testing GCJ:
 <li>Adam Sulmicki
 <li>Frederik Warg
 <li>Gregory Warnes
-<li>Mark Wielaard
 <li>David E. Young
 </ul>
 
