* gcj-3.1-status.html: xscale-elf is ok.

--- a/htdocs/java/gcj-3.1-status.html
+++ b/htdocs/java/gcj-3.1-status.html
@@ -28,12 +28,6 @@
 </tr>
 
 <tr bgcolor='#eeaaaa'>
-    <td> <a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?database=gcc&cmd=view&pr=5874">5874</a> </td>
-    <td>libgcj test suite bug</td>
-    <td> Tom </td>
-</tr>
-
-<tr bgcolor='#eeaaaa'>
 <td> <a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?database=gcc&cmd=view&pr=5879">5879</a> </td>
 <td>Throwing exceptions causes SEGV in GCJ-compiled code.
      Patch available but unreviewed.</td>
@@ -103,7 +97,7 @@
 </tr>
 
 <tr bgcolor='#eeaaaa'> <td> i386-pc-solaris2.8 </td>
-     <td> Bootstrap failure </td>
+     <td> Bootstrap failure; also, libgcj currently not enabled by default</td>
      <td> Rainer </td>
 </tr>
 
@@ -134,8 +128,8 @@
      <td> Rainer </td>
 </tr>
 
-<tr> <td>linux -x- xscale-elf </td>
-     <td> AG has one more patch </td>
+<tr bgcolor="aaeeee"> <td>linux -x- xscale-elf </td>
+     <td> Ok </td>
      <td> AG </td>
 </tr>
 
