Update requirements for Linux kernel, provide patch for MTL.

--- a/htdocs/gcc-3.1/criteria.html
+++ b/htdocs/gcc-3.1/criteria.html
@@ -177,10 +177,10 @@ different programming languages.</p>
 </tr>
 <tr><td><a href="http://www.kernel.org">Linux kernel</a></td>
     <td>C</td>
-    <td>2.4.0</td>
+    <td>2.4.18</td>
     <td><a
-    href="ftp://ftp.kernel.org/pub/linux/kernel/v2.4/linux-2.4.0.tar.gz">
-    linux-2.4.0.tar.gz</a></td>
+    href="ftp://ftp.kernel.org/pub/linux/kernel/v2.4/linux-2.4.18.tar.bz2">
+    linux-2.4.18.tar.gz</a></td>
 </tr>
 <tr><td><a href="http://www.gnu.org/software/emacs/">GNU Emacs</a></td>
     <td>C</td>
@@ -221,7 +221,7 @@ different programming languages.</p>
     <td>C++</td>
     <td>2.12.2.-20</td>
     <td><a href="http://www.osl.iu.edu/research/mtl/download.php3">
-        MTL (Download)</a></td>
+        MTL (Download)</a>, with <a ref="http://www.osl.iu.edu/MailArchives/mtl-devel/msg00311.php">patch</a></td>
 </tr>
 <tr><td><a href="http://www.trolltech.com/products/qt/index.html">Qt</a></td>
     <td>C++</td>
