* gcj-3.1-status.html: Updated rhug status, added Mauve.

--- a/htdocs/java/gcj-3.1-status.html
+++ b/htdocs/java/gcj-3.1-status.html
@@ -147,7 +147,12 @@
 </tr>
 
 <tr> <td> rhug </td>
-     <td> Build failure; not reported yet </td>
+     <td> Build failure on alpha; other platforms untested </td>
+     <td> Tom </td>
+</tr>
+
+<tr> <td> Mauve </td>
+     <td> Unknown </td>
      <td> Tom </td>
 </tr>
 
