--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -112,6 +112,13 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>alphaev6-dec-osf4.0f</td>
+<td>&nbsp;</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-03/msg00883.html">3.0.4</a></td>
+</tr>
+
+<tr>
 <td>alphaev6-dec-osf5.1</td>
 <td>&nbsp;</td>
 <td>Successful:
