--- a/htdocs/gcc-3.1/issues.html
+++ b/htdocs/gcc-3.1/issues.html
@@ -77,15 +77,6 @@ href="mailto:mark@codesourcery.com">Release Manager</a>.</em></p>
  <p>Submitted by Philib Blundell.</p>
 </dd>
 
-<dt><em>PR 5817</em></dt>
-<dd>
- <p><em>Unverified.</em></p>
-
- <p>Duplicate typedef causes ICE.  Regression from GCC 3.0.</p>
-
- <p>Submitted by Craig Rodrigues.</p>
-</dd>
-
 <dt><em>PR 5658</em></dt>
 <dd>
  <p><em>Unverified.</em></p>
@@ -201,17 +192,6 @@ href="mailto:mark@codesourcery.com">Release Manager</a>.</em></p>
  <p><em>Unverified.</em></p>
 
  <p>Non-type template parameter problems.</p>
-
- <p>Submitted by Nathan Sidwell.</p>
-</dd>
-
-<dt><em>PR 4026</em></dt>
-<dd>
- <p><em>Unverified.</em></p>
-
- <p>Assigned to Mark Mitchell.</p>
-
- <p>Bad code generated with optimization.</p>
 
  <p>Submitted by Nathan Sidwell.</p>
 </dd>
@@ -443,6 +423,13 @@ href="mailto:mark@codesourcery.com">Release Manager</a>.</em></p>
  <p>Submitted by Craig Rodrigues.</p>
 </dd>
 
+<dt><em>PR 5998</em></dt>
+<dd>
+ <p>G++ tends not to use builtins when it used to do so.</p>
+
+ <p>Submitted by Mike Stump.</p>
+</dd>
+
 </dl>
 
 <h2>Closed Issues</h2>
@@ -560,6 +547,23 @@ href="mailto:mark@codesourcery.com">Release Manager</a>.</em></p>
  <p>Submitted by Andreas Schwab.</p>
 </dd>
 
+<dt><em>PR 4026</em></dt>
+<dd>
+ <p>Closed: Mark Mitchell.</p>
+
+ <p>Bad code generated with optimization.</p>
+
+ <p>Submitted by Nathan Sidwell.</p>
+</dd>
+
+<dt><em>PR 5817</em></dt>
+<dd>
+ <p>Removed: Jason says this bug is not a regression.</p>
+
+ <p>Duplicate typedef causes ICE.  Regression from GCC 3.0.</p>
+
+ <p>Submitted by Craig Rodrigues.</p>
+</dd>
 
 </dl>
 
