* gcj-3.1-status.html: Test suite bug fixed.

--- a/htdocs/java/gcj-3.1-status.html
+++ b/htdocs/java/gcj-3.1-status.html
@@ -41,12 +41,6 @@
      <td> Unknown </td>
 </tr>
 
-<tr> <td> 3.1 test suite regressions </td>
-     <td> 1 failure observed on x86; cxxtest fails to link due to test
-     suite bug </td>
-     <td> Tom </td>
-</tr>
-
 </table>
 
 
@@ -89,12 +83,13 @@
 </tr>
 
 <tr bgcolor='#eeaaaa'> <td> i386-pc-solaris2.8 </td>
-     <td> Two patches in progress; libgcj currently not enabled by default</td>
+     <td> Patch in progress</td>
      <td> Rainer </td>
 </tr>
 
 <tr bgcolor='#aaeeee'> <td> mips-sgi-irix6.5 </td>
-     <td> Ok; libgcj currently not enabled by default </td>
+     <td> Ok; libgcj will not be enabled by default due to the tricks
+     required to get it to build</td>
      <td> Rainer </td>
 </tr>
 
