* gcj-3.1-status.html: Added solaris2.6.  PR 5879 is fixed.

--- a/htdocs/java/gcj-3.1-status.html
+++ b/htdocs/java/gcj-3.1-status.html
@@ -19,13 +19,6 @@
      <td> Alex </td>
 </tr>
 
-<tr bgcolor='#eeaaaa'>
-<td> <a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?database=gcc&cmd=view&pr=5879">5879</a> </td>
-<td>Throwing exceptions causes SEGV in GCJ-compiled code.
-     Patch available but unreviewed.</td>
-<td> Unknown </td>
-</tr>
-
 <tr> <td> <a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?database=gcc&cmd=view&pr=5942">5942</a> </td>
      <td> Classpath build failure </td>
      <td> Alex </td>
@@ -80,6 +73,11 @@
 <tr bgcolor='#aaeeee'> <td> sparc-sun-solaris2.8 </td>
      <td> Ok </td>
      <td> Rainer </td>
+</tr>
+
+<tr bgcolor='#aaeeee'> <td> sparc-sun-solaris2.6 </td>
+     <td> Ok </td>
+     <td> Andreas </td>
 </tr>
 
 <tr bgcolor='#eeaaaa'> <td> i386-pc-solaris2.8 </td>
