* status.html: Update two links to GCC 2.95 releases and make some 	links relative.

--- a/htdocs/libstdc++/status.html
+++ b/htdocs/libstdc++/status.html
@@ -46,19 +46,19 @@
    We suggest using CVS GCC.  The latest library snapshot has also been
    tested with this recent GCC snapshot:  <strong>2002-01-28</strong>,
    which is available from a
-   <a href="http://gcc.gnu.org/mirrors.html">GCC mirror site</a> under the
+   <a href="../mirrors.html">GCC mirror site</a> under the
    snapshots directory as &quot;2002-01-28/gcc[-g++]-20020128.tar.gz&quot;,
    or via CVS using the &quot;gcc_ss_20020128&quot; checkout tag.
 </p>
 
 <p>The most recent version of this library that will build with
-   <a href="http://gcc.gnu.org/gcc-2.95/gcc-2.95.2.html">GCC 2.95.2</a>
+   <a href="../gcc-2.95">GCC 2.95.2</a>
    is the ninth snapshot release,
    <a href="download.html">libstdc++-2.90.8.tar.gz</a>.
 </p>
 
 <p>If you are using
-   <a href="http://gcc.gnu.org/gcc-2.95/gcc-2.95.3.html">GCC 2.95.3</a>,
+   <a href="../gcc-2.95/">GCC 2.95.3</a>,
    then the most recent usable version of this library is <em>still</em>
    the ninth snapshot release,
    <a href="download.html">libstdc++-2.90.8.tar.gz</a>, <em>and</em> you
@@ -81,7 +81,7 @@
 </p>
 
 <p>Working platforms are listed
-   <a href="http://gcc.gnu.org/gcc-3.0/buildstat.html">here</a>, and test
+   <a href="../gcc-3.0/buildstat.html">here</a>, and test
    results can be found
    <a href="http://gcc.gnu.org/ml/gcc-testresults/">here</a> and
    <a href="http://people.redhat.com/geoffk/gcc-regression/">here</a>.
