--- a/htdocs/egcs-1.0/egcs-1.0.3.html
+++ b/htdocs/egcs-1.0/egcs-1.0.3.html
@@ -65,7 +65,7 @@ list of new features found in EGCS 1.0.x releases.</p>
 <p>The EGCS 1.0.3 release includes installation instructions in both HTML
 and plaintext forms (see the INSTALL directory in the toplevel directory
 of the EGCS 1.0.3 distribution).  However, we also keep the most up to date
-<a href="../install/index.html">installation instructions</a>
+<a href="http://gcc.gnu.org/install/">installation instructions</a>
 and <a href="buildstat.html">build/test status</a> on our web page.  We
 will update those pages as new information becomes available.</p>
 
