--- a/htdocs/java/gcj-3.1-status.html
+++ b/htdocs/java/gcj-3.1-status.html
@@ -91,7 +91,7 @@
      <td> Rainer </td>
 </tr>
 
-<tr> <td bgcolor='#aaeeee'> x86 Mingw32</td>
+<tr bgcolor='#aaeeee'> <td> x86 Mingw32</td>
      <td>Ok.  Only works as a target, not a host.
      Is still incomplete (at least Process does not work yet)
      </td>
