--- a/htdocs/contribute.html
+++ b/htdocs/contribute.html
@@ -154,6 +154,13 @@ Standards</a> for further information.  The ChangeLog entries should
 be plaintext rather than part of the patch since the top of the
 ChangeLog changes rapidly and a patch to the ChangeLog would probably
 no longer apply by the time your patch is reviewed.
+If your change fixes a PR, put text in the ChangeLog entry mentioning
+the PR.  The <code>cvs commit</code> machinery understands how to
+extract this information and automatically append the commit log to
+the PR.  In order to be recognized, the text must fit a particular
+form.  It must start with "PR", and then must include the category
+and PR number.  For instance, <code>Fixes PR java/2369</code> is
+valid.  Multiple PRs can be mentioned in a single message.
 </dd>
 
 <dt>Bootstrapping and testing</dt>
