Link to gcj 3.1 status page; moved a couple items to the Closed list

--- a/htdocs/gcc-3.1/issues.html
+++ b/htdocs/gcc-3.1/issues.html
@@ -194,24 +194,6 @@ href="mailto:mark@codesourcery.com">Release Manager</a>.</em></p>
  <p>Submitted by Toon Moene.</p>
 </dd>
 
-<dt><em>PR 5876</em></dt>
-<dd>
- <p><em>Unverified.</em></p>
-
- <p>Java regression.</p>
-
- <p>Submitted by Adam Megacz.</p>
-</dd>
-
-<dt><em>PR 5879</em></dt>
-<dd>
- <p><em>Unverified.</em></p>
-
- <p>Java regression.</p>
-
- <p>Submitted by Adam Megacz.</p>
-</dd>
-
 <dt><em>PR 4128</em></dt>
 <dd>
  <p><em>Unverified.</em></p>
@@ -338,9 +320,32 @@ href="mailto:mark@codesourcery.com">Release Manager</a>.</em></p>
  <p>Submitted by Mike Stump.</p>
 </dd>
 
+<dt><em>gcj issues</em> </dt>
+<dd>
+ <p>See <a href="../java/gcj-3.1-status.html">the gcj issues page</a>.
+</dd>
+
 </dl>
 
 <h2>Closed Issues</h2>
+
+<dt><em>PR 5876</em></dt>
+<dd>
+ <p><em>Closed: Alexandre Petit-Bianco</em></p>
+
+ <p>Java regression.</p>
+
+ <p>Submitted by Adam Megacz.</p>
+</dd>
+
+<dt><em>PR 5879</em></dt>
+<dd>
+ <p><em>Closed: Richard Henderson</em></p>
+
+ <p>Java regression.</p>
+
+ <p>Submitted by Adam Megacz.</p>
+</dd>
 
 <dl>
 <dt><em>PR 5693</em></dt>
