--- a/htdocs/gcc-3.1/issues.html
+++ b/htdocs/gcc-3.1/issues.html
@@ -185,15 +185,6 @@ href="mailto:mark@codesourcery.com">Release Manager</a>.</em></p>
  <p>Submitted by Stephane Carrez.</p>
 </dd>
 
-<dt><em>PR 5731</em></dt>
-<dd>
- <p><em>Unverified.</em></p>
-
- <p>G77 SIGSEGV when optimizing.</p>
-
- <p>Submitted by Toon Moene.</p>
-</dd>
-
 <dt><em>PR 4128</em></dt>
 <dd>
  <p><em>Unverified.</em></p>
@@ -568,6 +559,15 @@ href="mailto:mark@codesourcery.com">Release Manager</a>.</em></p>
  <p>Initializer error.</p>
 
  <p>Submitted by Nathan Sidwell.</p>
+</dd>
+
+<dt><em>PR 5731</em></dt>
+<dd>
+ <p>Closed: Toone Moene, patch by Jakub Jelinke.</p>
+
+ <p>G77 SIGSEGV when optimizing.</p>
+
+ <p>Submitted by Toon Moene.</p>
 </dd>
 
 
