--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -266,7 +266,8 @@ Installing GCC: Final Installation</a>.</p>
 <td>i386-pc-solaris2.8</td>
 <td>&nbsp;</td>
 <td>Successful:
-<a href="http://gcc.gnu.org/ml/gcc/2001-07/msg00350.html">3.0</a></td>
+<a href="http://gcc.gnu.org/ml/gcc/2001-07/msg00350.html">3.0</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2002-03/msg01310.html">3.0.4</a></td>
 </tr>
 
 <tr>
@@ -719,7 +720,9 @@ Installing GCC: Final Installation</a>.</p>
 <td>i686-pc-linux-gnu</td>
 <td>Slackware 7.1, glibc 2.1.3, kernel 2.4.17</td>
 <td>Successful (C, C++):
-<a href="http://gcc.gnu.org/ml/gcc/2001-12/msg01286.html">3.0.3</a></td>
+<a href="http://gcc.gnu.org/ml/gcc/2001-12/msg01286.html">3.0.3</a>;
+<br />Successful (C, C++, Java):
+<a href="http://gcc.gnu.org/ml/gcc/2002-03/msg01201.html">3.0.4</a></td>
 </tr>
 
 <tr>
