* done.html: Update PAL entry. 	* faq.html: Remove broken cprof link.

--- a/htdocs/java/faq.html
+++ b/htdocs/java/faq.html
@@ -600,8 +600,7 @@ $ ../configure [...]
           (gprof). POSIX threads seem to be incompatible with the gmon stuff.</p>
         
           <p>A couple of other tools that have been mentioned on the GCJ mailing list are 
-          sprof and cprof.  The former is part of GNU libc; the latter can be found
-          <a href="http://opensource.corel.com/cprof.html">here</a>.</p>
+          sprof and cprof.  The former is part of GNU libc.</p>
         </dd>
       </dl>
       
