* gcj-3.1-status.html: Added FreeBSD.  PR 5949 closed.  Updated 	Tru64 status.  PR 5948 closed.

--- a/htdocs/java/gcj-3.1-status.html
+++ b/htdocs/java/gcj-3.1-status.html
@@ -24,16 +24,6 @@
      <td> Alex </td>
 </tr>
 
-<tr> <td> <a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?database=gcc&cmd=view&pr=5948">5948</a> </td>
-     <td> bootstrap failure on x86 Solaris </td>
-     <td> Unknown </td>
-</tr>
-
-<tr> <td> <a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?database=gcc&cmd=view&pr=5949">5949</a> </td>
-     <td> bootstrap failure on OSF5.1 </td>
-     <td> Unknown </td>
-</tr>
-
 </table>
 
 
@@ -46,6 +36,11 @@
 <tr bgcolor='#aaeeee'> <td>i686-pc-linux-gnu</td>
      <td> Ok </td>
      <td> Tom </td>
+</tr>
+
+<tr> <td>i386-*-freebsd*</td>
+     <td> <a href="http://gcc.gnu.org/ml/java/2002-03/msg00436.html">Build failure</a> </td>
+     <td> Loren James Rittle </td>
 </tr>
 
 <tr bgcolor='#aaeeee'> <td>alphaev67-unknown-linux-gnu</td>
@@ -104,7 +99,14 @@
 </tr>
 
 <tr bgcolor="#eeaaaa"> <td>alpha-dec-osf4.0f</td>
-     <td> Bootstrap failure </td>
+     <td> <a
+     href=""http://gcc.gnu.org/ml/gcc-testresults/2002-03/msg00478.html>Many
+     regression failures</a> </td>
+     <td> Unknown </td>
+</tr>
+
+
+Bootstrap failure </td>
      <td> Rainer </td>
 </tr>
 
