--- a/htdocs/gcc-3.1/issues.html
+++ b/htdocs/gcc-3.1/issues.html
@@ -18,17 +18,6 @@ href="mailto:mark@codesourcery.com">Release Manager</a>.</em></p>
 <h2>Open Issues</h2>
 
 <dl>
-<dt><em>PR 5693</em></dt>
-<dd>
- <p><em>Unverified.</em></p>
-
- <p>The patch at <a
- href="http://gcc.gnu.org/ml/gcc-patches/2002-02/msg01568.html"
- >http://gcc.gnu.org/ml/gcc-patches/2002-02/msg01568.html</a> is
- alleged to fix important bugs and requires review.</p>
-
- <p>Submitted by Franz Sirl.</p>
-</dd>
 
 <dt><em>PR 5753</em></dt>
 <dd>
@@ -44,26 +33,6 @@ href="mailto:mark@codesourcery.com">Release Manager</a>.</em></p>
  <p>GNAT bug box directs reports to ACT bug-tracking system.</p>
 
  <p>Submitted by Joseph Myers.</p>
-</dd>
-
-<dt><em>PR c/5354</em></dt>
-<dd>
- <p><em>Unverified.</em></p>
-
- <p>Regression from GCC 2.95.x.  There is patch available at:
- <a href="http://gcc.gnu.org/ml/gcc-patches/2002-02/msg00958.html"
- >http://gcc.gnu.org/ml/gcc-patches/2002-02/msg00958.html</a>.</p>
-
- <p>Submitted by Jakub Jelinek.</p>
-</dd>
-
-<dt><em>PR 5687</em></dt>
-<dd>
- <p><em>Unverified.</em></p>
-
- <p>Regression from GCC 3.0.</p>
-
- <p>Submitted by Philib Blundell.</p>
 </dd>
 
 <dt><em>PR 5658</em></dt>
@@ -90,15 +59,6 @@ href="mailto:mark@codesourcery.com">Release Manager</a>.</em></p>
  <p>Submitted by Craig Rodrigues.</p>
 </dd>
 
-<dt><em>PR 5740</em></dt>
-<dd>
- <p><em>Unverified.</em></p>
-
- <p>SPARCV9 ICE running V3 testsuite.</p>
-
- <p>Submitted by Benjamin Kosnik.</p>
-</dd>
-
 <dt><em>Optimization Issues</em></dt>
 <dd>
  <p><em>Unverified.</em></p>
@@ -107,19 +67,6 @@ href="mailto:mark@codesourcery.com">Release Manager</a>.</em></p>
  http://gcc.gnu.org/ml/libstdc++/2002-03/msg00018.html</a>.</p>
 
  <p>Submitted by Benjamin Kosnik.</p>
-</dd>
-
-<dt><em>PR 5656</em></dt>
-<dd>
- <p><em>Unverified.</em></p>
-
- <p>ICE in emit_move_insn.  Regression from GCC 3.0.</p>
-
- <p>Possible patch at: <a
- href="http://gcc.gnu.org/ml/gcc-patches/2002-02/msg01508.html">
- http://gcc.gnu.org/ml/gcc-patches/2002-02/msg01508.html</a>.</p>
-
- <p>Submitted by Craig Rodrigues.</p>
 </dd>
 
 <dt><em>PR 5863</em></dt>
@@ -185,15 +132,6 @@ href="mailto:mark@codesourcery.com">Release Manager</a>.</em></p>
  <p>Submitted by Stephane Carrez.</p>
 </dd>
 
-<dt><em>PR 4128</em></dt>
-<dd>
- <p><em>Unverified.</em></p>
-
- <p>RTL checking bootstrap on Solaris 2.7.</p>
-
- <p>Submitted by Kaveh Ghazi.</p>
-</dd>
-
 <dt><em>PR optimization/5768</em></dt>
 <dd>
  <p><em>Unverified.</em></p>
@@ -201,26 +139,6 @@ href="mailto:mark@codesourcery.com">Release Manager</a>.</em></p>
  <p>SH codegen bug.</p>
 
  <p>Submitted by Arati Dikey.</p>
-</dd>
-
-<dt><em>PR 4792</em></dt>
-<dd>
- <p><em>Unverified.</em></p>
-
- <p>x86 glibc miscompilation.</p>
-
- <p>Craig Rodrigues says this issue has been resolved.</p>
-
- <p>Submitted by Andreas Jaeger.</p>
-</dd>
-
-<dt><em>PR 4792</em></dt>
-<dd>
- <p><em>Unverified.</em></p>
-
- <p>ICE building arc-elf.</p>
-
- <p>Submitted by Joel Sherrill.</p>
 </dd>
 
 <dt><em>PR 3931</em></dt>
@@ -259,29 +177,11 @@ href="mailto:mark@codesourcery.com">Release Manager</a>.</em></p>
  <p>Submitted by Joel Sherrill.</p>
 </dd>
 
-<dt><em>PR 4195</em></dt>
-<dd>
- <p><em>Unverified.</em></p>
-
- <p>mn10200 fails to build libgcc.</p>
-
- <p>Submitted by Joel Sherrill.</p>
-</dd>
-
 <dt><em>V850 ICE</em></dt>
 <dd>
  <p><em>Unverified.</em></p>
 
  <p>libiberty does not build on v850.</p>
-
- <p>Submitted by Joel Sherrill.</p>
-</dd>
-
-<dt><em>PR 4192</em></dt>
-<dd>
- <p><em>Unverified.</em></p>
-
- <p>crtbegin.o does not build on fr30.</p>
 
  <p>Submitted by Joel Sherrill.</p>
 </dd>
@@ -320,6 +220,8 @@ href="mailto:mark@codesourcery.com">Release Manager</a>.</em></p>
 
 <h2>Closed Issues</h2>
 
+<dl>
+
 <dt><em>PR 5876</em></dt>
 <dd>
  <p><em>Closed: Alexandre Petit-Bianco</em></p>
@@ -338,7 +240,6 @@ href="mailto:mark@codesourcery.com">Release Manager</a>.</em></p>
  <p>Submitted by Adam Megacz.</p>
 </dd>
 
-<dl>
 <dt><em>PR 5693</em></dt>
 <dd>
  <p>Closed: Richard Henderson.</p>
@@ -563,13 +464,86 @@ href="mailto:mark@codesourcery.com">Release Manager</a>.</em></p>
 
 <dt><em>PR 5731</em></dt>
 <dd>
- <p>Closed: Toone Moene, patch by Jakub Jelinke.</p>
+ <p>Closed: Toone Moene, patch by Jakub Jelinek.</p>
 
  <p>G77 SIGSEGV when optimizing.</p>
 
  <p>Submitted by Toon Moene.</p>
 </dd>
 
+<dt><em>PR 4128</em></dt>
+<dd>
+ <p>Closed: Jakub Jelinek.</p>
+
+ <p>RTL checking bootstrap on Solaris 2.7.</p>
+
+ <p>Submitted by Kaveh Ghazi.</p>
+</dd>
+
+<dt><em>PR 5656</em></dt>
+<dd>
+ <p>Closed: Jakub Jelinek.</p>
+
+ <p>ICE in emit_move_insn.  Regression from GCC 3.0.</p>
+
+ <p>Possible patch at: <a href="http://gcc.gnu.org/ml/gcc-patches/2002-02/msg01508.html">http://gcc.gnu.org/ml/gcc-patches/2002-02/msg01508.html</a>.</p>
+
+ <p>Submitted by Craig Rodrigues.</p>
+</dd>
+
+<dt><em>PR 5740</em></dt>
+<dd>
+ <p>Closed: Jakub Jelinek.</p>
+
+ <p>SPARCV9 ICE running V3 testsuite.</p>
+
+ <p>Submitted by Benjamin Kosnik.</p>
+</dd>
+
+<dt><em>PR c/5354</em></dt>
+<dd>
+ <p>Closed: Richard Henderson.</p>
+
+ <p>Regression from GCC 2.95.x.  There is patch available at: <a href="http://gcc.gnu.org/ml/gcc-patches/2002-02/msg00958.html">http://gcc.gnu.org/ml/gcc-patches/2002-02/msg00958.html</a>.</p>
+
+ <p>Submitted by Jakub Jelinek.</p>
+</dd>
+
+<dt><em>PR 4195</em></dt>
+<dd>
+ <p>Closed: Jakub Jelinek.</p>
+
+ <p>mn10200 fails to build libgcc.</p>
+
+ <p>Submitted by Joel Sherrill.</p>
+</dd>
+
+<dt><em>PR 4792</em></dt>
+<dd>
+ <p>Closed: Jakub Jelinek.</p>
+
+ <p>ICE building arc-elf.</p>
+
+ <p>Submitted by Joel Sherrill.</p>
+</dd>
+
+<dt><em>PR 4192</em></dt>
+<dd>
+ <p>Closed: Jakub Jelinek.</p>
+
+ <p>crtbegin.o does not build on fr30.</p>
+
+ <p>Submitted by Joel Sherrill.</p>
+</dd>
+
+<dt><em>PR 5687</em></dt>
+<dd>
+ <p>Closed: Philip Blundell, probably duplicate of <em>PR 5747</em>.</p>
+
+ <p>Regression from GCC 3.0.</p>
+
+ <p>Submitted by Philip Blundell.</p>
+</dd>
 
 </dl>
 
