--- a/htdocs/onlinedocs/index.html
+++ b/htdocs/onlinedocs/index.html
@@ -16,6 +16,22 @@
      versions.  -->
 
 <ul>
+  <li>GCC 3.0.4 manuals:
+  <ul>
+    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.0.4/gcc.html">GCC
+         3.0.4 Manual</a> (<a
+         href="http://gcc.gnu.org/onlinedocs/gcc-3.0.4/gcc.ps.gz">also
+         in PostScript</a>)</li>
+    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.0.4/g77.html">G77
+         0.5.26 (GCC 3.0.4) Manual</a> (<a
+         href="http://gcc.gnu.org/onlinedocs/gcc-3.0.4/g77.ps.gz">also
+         in PostScript</a>)</li>
+    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.0.4/gcj.html">GCC
+         3.0.4 GCJ Manual</a> (<a
+         href="http://gcc.gnu.org/onlinedocs/gcc-3.0.4/gcj.ps.gz">also
+         in PostScript</a>)</li>
+  </ul></li>
+
   <li>GCC 3.0.3 manuals:
   <ul>
     <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.0.3/gcc.html">GCC
