Improvements to 3.1 release notes: mention -traditional deprecation, note additional C99 features, adjust title of gcc-3.1/c99status.html.

--- a/htdocs/gcc-3.1/c99status.html
+++ b/htdocs/gcc-3.1/c99status.html
@@ -1,11 +1,11 @@
 <html>
 
 <head>
-<title>Status of C99 features in GCC</title>
+<title>Status of C99 features in GCC 3.1</title>
 </head>
 
 <body>
-<h1>Status of C99 features in GCC</h1>
+<h1>Status of C99 features in GCC 3.1</h1>
 
 <p>This table is based on the list in the foreword to the printed
 standard ISO/IEC 9899:1999 (E), as amended by ISO/IEC
