--- a/htdocs/gcc-3.1/caveats.html
+++ b/htdocs/gcc-3.1/caveats.html
@@ -8,7 +8,9 @@
 <h1>GCC 3.1 Caveats</h1>
 
 <ul>
-  <li>This is to become the first caveat.</li>
+  <li>The <code>-traditional</code> C compiler option has been
+  deprecated and will be removed in GCC 3.2.  (It remains possible to
+  preprocess non-C code with the traditional preprocessor.)</li>
 </ul>
 
 </body>
