--- a/htdocs/gcc-3.1/changes.html
+++ b/htdocs/gcc-3.1/changes.html
@@ -14,7 +14,11 @@
   </ul>
   </li>
   
-  <li>New Languages and Language specific improvements</li>
+  <li>New Languages and Language specific improvements
+  <ul>
+    <li>A few more <a href="c99status.html">ISO C99 features</a>.</li>
+  </ul>
+  </li>
 
   <li>New Targets and Target Specific Improvements
   <ul>
