Mention 3.1 branch date.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -153,6 +153,13 @@ and automated testers</a> to maintain and improve quality.
 
 <dl>
 
+<dt><b>February 25, 2002</b></dt>
+<dd>
+We have branched for <a href="gcc-3.1/criteria.html">GCC 3.1</a> and are
+concentrating on bugfixes.  The 3.1 release is
+<a href="develop.html#calendar">planned for mid-April</a>.
+</dd>
+
 <dt><b>February 21, 2002</b></dt>
 <dd>
 GCC 3.0.4 has been released.
