Add a comment stating that all maintainers should feel free to update this.

--- a/htdocs/gcc-3.1/changes.html
+++ b/htdocs/gcc-3.1/changes.html
@@ -4,6 +4,10 @@
 <title>GCC 3.1 Changes, New Features, and Fixes</title>
 </head>
 
+<!-- GCC maintainers, please do not hesitate to update/contribute entries
+     concerning those part of GCC you maintain!  2002-03-23, Gerald.
+-->
+
 <body>
 <h1>GCC 3.1 Changes, New Features, and Fixes</h1>
 
