--- a/htdocs/gcc-3.1/changes.html
+++ b/htdocs/gcc-3.1/changes.html
@@ -21,6 +21,14 @@
   <li>New Languages and Language specific improvements
   <ul>
     <li>A few more <a href="c99status.html">ISO C99 features</a>.</li>
+    <li>The preprocessor is 10-50% faster than the preprocessor in GCC
+        3.0.</li>
+    <li>The preprocessor's symbol table has been merged with the
+        symbol table of the C, C++ and Objective-C front ends.</li>
+    <li>The preprocessor consumes less memory than the preprocessor in
+        GCC 3.0, often significantly so.  On normal input files, it
+        typically consumes less memory than pre-3.0 cccp-based GCC,
+        too.</li>
   </ul>
   </li>
 
