* gcj-3.1-status.html: x86 Solaris 2.8 is ok.

--- a/htdocs/java/gcj-3.1-status.html
+++ b/htdocs/java/gcj-3.1-status.html
@@ -75,8 +75,8 @@
      <td> Andreas </td>
 </tr>
 
-<tr bgcolor='#eeaaaa'> <td> i386-pc-solaris2.8 </td>
-     <td> Patch in progress</td>
+<tr bgcolor='#aaeeee> <td> i386-pc-solaris2.8 </td>
+     <td> Ok </td>
      <td> Rainer </td>
 </tr>
 
