--- a/htdocs/java/gcj-3.1-status.html
+++ b/htdocs/java/gcj-3.1-status.html
@@ -75,7 +75,7 @@
      <td> Andreas </td>
 </tr>
 
-<tr bgcolor='#aaeeee> <td> i386-pc-solaris2.8 </td>
+<tr bgcolor='#aaeeee'> <td> i386-pc-solaris2.8 </td>
      <td> Ok </td>
      <td> Rainer </td>
 </tr>
