Two markup fixes. By Andrea 'Fyre Wyzard' Bocci <fwyzard@inwind.it>.

--- a/htdocs/gcc-3.1/criteria.html
+++ b/htdocs/gcc-3.1/criteria.html
@@ -221,7 +221,7 @@ different programming languages.</p>
     <td>C++</td>
     <td>2.12.2.-20</td>
     <td><a href="http://www.osl.iu.edu/research/mtl/download.php3">
-        MTL (Download)</a>, with <a ref="http://www.osl.iu.edu/MailArchives/mtl-devel/msg00311.php">patch</a></td>
+        MTL (Download)</a>, with <a href="http://www.osl.iu.edu/MailArchives/mtl-devel/msg00311.php">patch</a></td>
 </tr>
 <tr><td><a href="http://www.trolltech.com/products/qt/index.html">Qt</a></td>
     <td>C++</td>
