--- a/htdocs/gcc-3.1/issues.html
+++ b/htdocs/gcc-3.1/issues.html
@@ -213,7 +213,7 @@ href="mailto:mark@codesourcery.com">Release Manager</a>.</em></p>
 
 <dt><em>gcj issues</em> </dt>
 <dd>
- <p>See <a href="../java/gcj-3.1-status.html">the gcj issues page</a>.
+ <p>See <a href="../java/gcj-3.1-status.html">the gcj issues page</a></p>.
 </dd>
 
 </dl>
