Mention the many gcj changes since 3.0.x.

--- a/htdocs/gcc-3.1/changes.html
+++ b/htdocs/gcc-3.1/changes.html
@@ -29,6 +29,26 @@
         GCC 3.0, often significantly so.  On normal input files, it
         typically consumes less memory than pre-3.0 cccp-based GCC,
         too.</li>
+
+    <li>libgcj now includes RMI, <code>java.lang.ref.*</code>,
+        <code>javax.naming</code>, and <code>javax.transaction</code>.</li>
+    <li>Property files and other system resources can be compiled into
+        executables which use libgcj using the new <code>gcj -R</code>
+        feature.</li>
+    <li>libgcj has been ported to more platforms.  In particular there
+        is now a mostly-functional mingw32 target port.</li>
+    <li>gcj can now use builtins functions for certain known methods,
+        for instance <code>Math.cos</code>.  gcj also has a new
+        <code>--no-store-checks</code> optimization option.</li>
+    <li>The following thrd party interface standards were added to
+        libgcj: <code>org.w3c.dom</code> and <code>org.xml.sax</code>.</li>
+    <li><code>java.security</code> has been merged with GNU
+        Classpath. The new package is now JDK 1.2 compliant, and much
+        more complete.</li>
+    <li>A bytecode verifier was added to the libgcj interpreter.</li>
+    <li><code>java.lang.Character</code> was rewritten to comply with
+        the Unicode 3.0 standard.</li>
+    <li>Partial support for many more locales was added to libgcj.</li>
   </ul>
   </li>
 
